kubecost/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubecost-ingress
  namespace: kubecost
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/app-root: "/"
spec:
  rules:
  - host: kubecost.letsdevops.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: kubecost-cost-analyzer
          servicePort: 9090
